--- a/bouncing balls/style.css
+++ b/bouncing balls/style.css
@@ -1,8 +1,3 @@
-@font-face {
-    font-family: 'montserrat';
-    src: url('fonts/Montserrat-Regular.otf') format('otf');
-}
-
 *,
 *:before,
 *:after {
@@ -21,21 +16,9 @@ body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-color: #b7c9d5;
+    background-color: #274754 /*#b7c9d5;*/
 }
 
-#simulation {
-}
-
-#graph {
-    border-left: 1px solid black;
-    border-bottom: 1px solid black;
-}
-
-#bar {
-    border-left: 1px solid black;
-    border-bottom: 1px solid black;
-}
 
 .statistics-wrapper {
     display: flex;
@@ -48,6 +31,8 @@ body {
 
 .numbers {
     font-family: 'montserrat';
+    font-weight: 600;
+    margin: 1rem
 }
 
 .row {
@@ -56,17 +41,17 @@ body {
 }
 
 .susceptible {
-    color: #538b94;
+    color: #36CFB6
 }
 
 .infected {
-    color: #9f4c00;
+    color: #FF2836;
 }
 
 .recovered {
-    color: #96418a;
+    color: #96418A
 }
 
 .dead {
-    color: #050505;
+    color: #002632
 }
